# map_stitcher

./: CMakeLists.txt  README.md  package.xml
include/map_stitcher/: MapStitcher.hh
launch/: MapStitcher.launch
src/: MapStitcher.cpp
